--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build-cli": "pnpm -F @etorch/cli build",
+    "build-shared-utils": "pnpm -F @etorch/shared-utils build",
     "dev-server": "pnpm -F @etorch/server dev"
   },
   "keywords": [],
