--- a/packages/etorch-server/package.json
+++ b/packages/etorch-server/package.json
@@ -12,14 +12,11 @@
   "author": "Seungwoo, Lee <seungwoo321@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "@etorch/shared-utils": "workspace:^",
     "@koa/cors": "^5.0.0",
     "@koa/router": "^12.0.1",
-    "dotenv": "^16.4.5",
-    "eidl": "^1.1.0",
     "koa": "^2.15.0",
-    "koa-bodyparser": "^4.4.1",
-    "mariadb": "^3.2.3",
-    "sequelize": "^6.37.1"
+    "koa-bodyparser": "^4.4.1"
   },
   "devDependencies": {
     "@types/koa": "^2.15.0",
