--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -4,8 +4,6 @@
     "moduleResolution": "Node",
     "target": "ES2020",
     "esModuleInterop": true,
-    "sourceMap": true,
-    // "outDir": "dist"
-  },
-  "include": ["**/*"]
+    "sourceMap": true
+  }
 }
