--- a/packages/etorch-cli/package.json
+++ b/packages/etorch-cli/package.json
@@ -32,6 +32,7 @@
     "chalk": "^4.1.2",
     "commander": "^12.0.0",
     "fs-extra": "^11.2.0",
+    "moment": "^2.30.1",
     "semver": "^7.6.0"
   }
 }
