--- a/packages/etorch-cli/package.json
+++ b/packages/etorch-cli/package.json
@@ -6,8 +6,7 @@
     "eidc": "bin/eidc.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc --build"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
