--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -4,6 +4,11 @@
     "moduleResolution": "Node",
     "target": "ES2020",
     "esModuleInterop": true,
-    "sourceMap": true
+    "sourceMap": true,
+    "baseUrl": ".",
+    "paths": {
+      "@etorch/shared-utils": ["packages/etorch-shared-utils"],
+      "@etorch/server": ["packages/etorch-server"]
+    }
   }
 }
